# tree-sitter-jsonnet

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  sign-off.sh  test.sh  tree-sitter.json
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_jsonnet/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
queries/: context.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: expressions.txt  import.txt  object.txt  quoted_string.txt  string.txt  text_block.txt
test/highlight/: string.jsonnet
